--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,12 @@ MC_API_AUTH='mojang'
 MC_ACCOUNT_EMAIL=''
 MC_ACCOUNT_PASSWORD=''
 
-MC_SERVER_IP='SaicoPvP.com'
+MC_SERVER_IP=''
 MC_SERVER_PORT='25565'
 
-MC_GAME_VERSION='1.8.9'
+MC_GAME_VERSION=''
 
-MC_JOIN_COMMAND='/server magma'
+MC_JOIN_COMMAND=''
 
 #===========================================================================================#
 
@@ -21,8 +21,8 @@ MC_JOIN_COMMAND='/server magma'
 
 DISCORD_BOT_ID=''
 DISCORD_BOT_TOKEN=''
-DISCORD_BOT_COMMAND_PREFIX='example_prefix!'
-DISCORD_BOT_CONTROLLERS='163646957783482370, 326889409490452481, 368405504264765441, 264175472261201920, 326111273152675851'
+DISCORD_BOT_COMMAND_PREFIX='example_bot_prefix!'
+DISCORD_BOT_CONTROLLERS=''
 DISCORD_BOT_CHAT_LOG_CHANNEL_ID=''
 
 #===========================================================================================#
