--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,24 @@
 #===========================================================================================#
 
-# 'mojang' or 'microsoft'
+# use either 'mojang' or 'microsoft'
 MC_API_AUTH='mojang'
 
+# the accounts's email goes here
 MC_ACCOUNT_EMAIL=''
+
+# the accounts's password goes here
 MC_ACCOUNT_PASSWORD=''
 
+# example: 'SaicoPvP.com'
 MC_SERVER_IP=''
-MC_SERVER_PORT='25565'
 
+# example: '25565'
+MC_SERVER_PORT=''
+
+# example: '1.8.9'
 MC_GAME_VERSION=''
 
+# example: '/server magma'
 MC_JOIN_COMMAND=''
 
 #===========================================================================================#
@@ -19,10 +27,19 @@ MC_JOIN_COMMAND=''
 
 #===========================================================================================#
 
+# the client_id of the bot
 DISCORD_BOT_ID=''
+
+# the discord bot's token
 DISCORD_BOT_TOKEN=''
+
+# discord bot command prefix
 DISCORD_BOT_COMMAND_PREFIX='example_bot_prefix!'
+
+# comma delimited list of discord_id's
 DISCORD_BOT_CONTROLLERS=''
+
+# leave empty to not use
 DISCORD_BOT_CHAT_LOG_CHANNEL_ID=''
 
 #===========================================================================================#
