added `AUTO_RECONNECT` and `AUTO_REJOIN` options

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,12 @@ MC_GAME_VERSION=''
 # example: '/server magma'
 MC_JOIN_COMMAND=''
 
+# example: 'enabled' or 'disabled'
+MC_AUTO_RECONNECT=''
+
+# example: 'enabled' or 'disabled'
+MC_AUTO_REJOIN=''
+
 #===========================================================================================#
 
 
